--- a/public/index.html
+++ b/public/index.html
@@ -46,5 +46,10 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <!-- socket cdn link
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      const socket = io();
+    </script> -->
   </body>
 </html>
